# brief

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_manual.py
.github/workflows/: publish.yml
brief/: __init__.py  api.py  cli.py  config.py  mcp_server.py  renderer.py  schemas.py  service.py  store.py  summarizer.py
brief/extractors/: __init__.py  github.py  local.py  pdf.py  reddit.py  video.py  webpage.py
tests/: test_captions.py  test_github_extractor.py  test_pipeline.py
