[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getbrief"
version = "0.5.0"
description = "Content compression for AI agents. Extract once, render per query."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.55.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
  "trafilatura>=2.0.0",
  "pymupdf>=1.24.0",
  "faster-whisper>=1.0.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
playwright = [
  "playwright>=1.40.0",
]

[project.scripts]
brief = "brief.cli:app"
brief-mcp = "brief.mcp_server:main"

[tool.setuptools.packages.find]
include = ["brief*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
